<resources>
    <string name="app_name">WHIB</string>

    <string name="button_continue">Continue</string>
    <string name="button_whereabouts">Whereabouts</string>
    <string name="button_reminders">Reminders</string>
    <string name="button_register">Get Started</string>

    <string name="welcome_text">Welcome to WHIB!</string>
    <string name="welcome_message">Lets get you setup!</string>
    <string name="register_input">What is your name?</string>
    <string name="welcome_back">Welcome back</string>
    <string name="welcome_back_message">So, where have you been?</string>


    <string name="whereabouts_title">Whereabouts</string>
    <string-array name="whereabouts_spinner">
        <item>Series</item>
        <item>Movie</item>
        <item>Book</item>
    </string-array>


    <string name="detail_whereabout_title">Details</string>
    <string name="detail_whereabout_title_title">Title</string>
    <string name="detail_whereabout_part_series">Season</string>
    <string name="detail_whereabout_part_movie">Part</string>
    <string name="detail_whereabout_part_book">Part</string>
    <string name="detail_whereabout_progress_series">Episode</string>
    <string name="detail_whereabout_progress_movie">Timestamp</string>
    <string name="detail_whereabout_progress_book">Page</string>
    <string name="detail_whereabout_source_title">Source</string>
    <string name="detail_whereabout_note_title">Note</string>
    <string name="detail_whereabout_edit">Type here...</string>
    <string name="detail_whereabout_edit_button">Finish</string>
    <string name="detail_whereabout_delete_button">Remove</string>



    <string name="add_whereabout_actionbar_title">Add whereabout</string>
    <string-array name="add_whereabout_spinner_default">
        <item>Select your whereabout...</item>
        <item>Series</item>
        <item>Movie</item>
        <item>Book</item>
    </string-array>
    <string-array name="add_whereabout_spinner_selected">
        <item>Series</item>
        <item>Movie</item>
        <item>Book</item>
    </string-array>
    <string name="add_whereabout_title">Add Whereabout</string>
    <string name="add_whereabout_title_title">Title</string>
    <string name="add_whereabout_part_series">Season</string>
    <string name="add_whereabout_part_movie">Part</string>
    <string name="add_whereabout_part_book">Part</string>
    <string name="add_whereabout_progress_title">Progress</string>
    <string name="add_whereabout_source_title">Source [Optional]</string>
    <string name="add_whereabout_note_title">Note [Optional]</string>
    <string name="add_whereabout_title_input_hint_series">What were you watching?</string>
    <string name="add_whereabout_part_input_hint_series">What season are you watching?</string>
    <string name="add_whereabout_progress_input_hint_series">What is your next episode?</string>
    <string name="add_whereabout_source_input_hint_series">Where did you watch the series?</string>
    <string name="add_whereabout_note_input_hint_series">What was the last thing you saw?</string>
    <string name="add_whereabout_title_input_hint_movie">What were you watching?</string>
    <string name="add_whereabout_part_input_hint_movie">What part are you watching?</string>
    <string name="add_whereabout_progress_input_hint_movie">What time were you on?</string>
    <string name="add_whereabout_source_input_hint_movie">Where did you watch the movie?</string>
    <string name="add_whereabout_note_input_hint_movie">What was the last thing you saw?</string>
    <string name="add_whereabout_title_input_hint_book">What were you reading?</string>
    <string name="add_whereabout_part_input_hint_book">What part is the book?</string>
    <string name="add_whereabout_progress_input_hint_book">What is your next page number?</string>
    <string name="add_whereabout_source_input_hint_book">Where did you read this book?</string>
    <string name="add_whereabout_note_input_hint_book">What was the last thing you read?</string>
    <string name="add_whereabout_button">Add</string>


    <string name="reminders_text">Reminders</string>

    <string name="detail_reminder_title">Title</string>
    <string name="detail_reminder_description">Description</string>
    <string name="detail_reminder_date">Date</string>
    <string name="detail_reminder_time">Time</string>
    <string name="detail_reminder_repeat">Repeat</string>

    <string name="add_reminder_title_title">Title</string>
    <string name="add_reminder_title_input">What do you want to be reminded of?</string>
    <string name="add_reminder_description_title">Description</string>
    <string name="add_reminder_description_input">What is coming up?</string>
    <string name="add_reminder_check_box">Repeat</string>
    <string name="add_reminder_button">Add</string>


    <string name="placeholder_text">None</string>

    <string name="test_text">You have reached the test page :D</string>
</resources>