<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <include
                    android:id="@+id/actionbar_add_reminder_activity"
                    layout="@layout/actionbar_default" />

                <TextView
                    android:id="@+id/addReminderFormTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/add_reminder_title_title"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    app:layout_constraintTop_toBottomOf="@+id/actionbar_add_reminder_activity"
                    tools:layout_editor_absoluteX="20dp" />

                <EditText
                    android:id="@+id/addReminderFormTitleInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:ems="10"
                    android:hint="@string/add_reminder_title_input"
                    android:inputType="textPersonName"
                    tools:layout_editor_absoluteX="20dp"
                    app:layout_constraintTop_toBottomOf="@+id/addReminderFormTitle"
                    tools:layout_editor_absoluteY="124dp" />

                <TextView
                    android:id="@+id/addReminderDescriptionTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:text="@string/add_reminder_description_title"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    tools:layout_editor_absoluteX="20dp"
                    app:layout_constraintTop_toBottomOf="@+id/addReminderFormTitleInput"
                    tools:layout_editor_absoluteY="189dp" />

                <EditText
                    android:id="@+id/addReminderFormDescriptionInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:ems="10"
                    android:hint="@string/add_reminder_description_input"
                    android:inputType="textPersonName"
                    tools:layout_editor_absoluteX="20dp"
                    app:layout_constraintTop_toBottomOf="@+id/addReminderDescriptionTitle"
                    tools:layout_editor_absoluteY="213dp" />

                <CalendarView
                    android:id="@+id/reminderCalendarView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="30dp"
                    tools:layout_editor_absoluteX="30dp"
                    app:layout_constraintTop_toBottomOf="@+id/addReminderFormDescriptionInput"
                    tools:layout_editor_absoluteY="268dp" />

                <NumberPicker
                    android:id="@+id/numberPickerHours"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="140dp"
                    android:layout_marginLeft="140dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/reminderCalendarView" />

                <NumberPicker
                    android:id="@+id/numberPickerMinutes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toEndOf="@+id/numberPickerHours"
                    app:layout_constraintTop_toBottomOf="@+id/reminderCalendarView" />

                <CheckBox
                    android:id="@+id/reminderCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_reminder_check_box"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/numberPickerMinutes" />

                <Button
                    android:id="@+id/addReminderButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="40dp"
                    android:text="@string/add_reminder_button"
                    app:backgroundTint="@color/green"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/reminderCheckBox" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>